# alexandrya-backend

./: .gitignore  Dockerfile  README.md  alexandrya-backend.sln  azure-pipelines.yml  docker-compose.yml  pyproject.toml  start.sh
alexandrya-backend/: Program.cs  alexandrya-backend.csproj  alexandrya-backend.http
alexandrya-backend/Properties/: launchSettings.json
src/: manage.py
src/alexandrya/: asgi.py  settings.py  urls.py  wsgi.py
src/book/: extract_metadata.py  urls.py
src/book/management/commands/: updatebooks.py
src/book/migrations/: 0001_initial.py  0002_alter_book_authors.py  0003_auto_20220828_1344.py
src/book/models/: author.py  book.py  books.py  category.py
src/book/serializers/: book_serializer.py
src/book/views/: book_viewset.py
src/common/models/: __init__.py  entity.py
src/common/serializers/: entity.py
